--- a/css/style.css
+++ b/css/style.css
@@ -622,25 +622,58 @@ header button {
 
 .hobby .item {
 	height: 25vh;
+	position: relative;
+	transition: 2s;
+}
+
+.hobby .item span {
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	transition: 0.5s;
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 
-.hobby .item:nth-of-type(1) {
+/* First picture */
+.hobby .item:nth-of-type(1) span {
 	background-image: url(../images/hobby1_1.jpg);
 }
 
-.hobby .item:nth-of-type(2) {
+/* Second picture */
+.hobby .item:nth-of-type(2) span {
 	background-image: url(../images/hobby2_2.jpg);
 }
-
-.hobby .item:nth-of-type(3) {
+/* Third picture */
+.hobby .item:nth-of-type(3) span {
 	background-image: url(../images/hobby3_3.jpg);
 }
-
-.hobby .item:nth-of-type(4) {
+/* Fourth picture */
+.hobby .item:nth-of-type(4) span {
 	background-image: url(../images/hobby4_4.jpg);
+}
+
+/* Breaking pictures */
+.hobby .item span:nth-of-type(1) {
+	clip-path: polygon(0 0, 50% 0, 50% 50%, 0 50%);
+	transition-delay: 0s;
+}
+
+.hobby .item span:nth-of-type(2) {
+	clip-path: polygon(50% 0, 100% 0, 100% 50%, 50% 50%);
+	transition-delay: 0.25s;
+}
+
+.hobby .item span:nth-of-type(3) {
+	clip-path: polygon(0 50%, 50% 50%, 50% 100%, 0 100%);
+	transition-delay: 0.5s;
+}
+
+.hobby .item span:nth-of-type(4) {
+	clip-path: polygon(50% 50%, 100% 50%, 100% 100%, 50% 100%);
+	transition-delay: 0.75s;
 }
 
 .hobby .item p {
@@ -649,19 +682,60 @@ header button {
 	text-align: center;
 	line-height: 25vh;
 	text-shadow: 0 0 4px black;
-	background-color: rgba(0, 0, 0, 0.5);
 	font-size: 20px;
 }
 
+@keyframes text {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
+
 @media (min-width: 533px) {
+	/* hover img*/
+
+	.hobby .item:hover span:nth-of-type(1) {
+		transform: translate(-40px, -60px) rotate(-15deg);
+	}
+
+	.hobby .item:hover span:nth-of-type(2) {
+		transform: translate(40px, -100px) rotate(25deg);
+	}
+
+	.hobby .item:hover span:nth-of-type(3) {
+		transform: translate(-40px, 120px) rotate(10deg);
+	}
+
+	.hobby .item:hover span:nth-of-type(4) {
+		transform: translate(40px, 150px) rotate(-10deg);
+	}
+
 	.hobby .item {
 		float: left;
-		width: 50%;
-		height: 40vh;
+		margin: 2% 7%;
+		width: 35%;
+		height: 40%;
+	}
+
+	.hobby .item:nth-of-type(3),
+	.hobby .item:nth-of-type(4) {
+		margin-top: 12%;
+		margin-bottom: 14%;
 	}
 
 	.hobby .item p {
 		line-height: 40vh;
+		color: black;
+	}
+
+	.hobby .item:hover p {
+		animation: text 2s linear;
+		animation-iteration-count: 1;
+		cursor: pointer;
 	}
 }
 
@@ -678,23 +752,8 @@ header button {
 }
 
 @media (min-width: 1024px) {
-	.hobby .item p {
-		opacity: 0;
-		transition: 1s;
-		cursor: default;
-	}
-
 	.hobby .item:hover p {
 		opacity: 1;
-	}
-
-	.hobby .item {
-		background-size: 100%;
-		transition: 1s;
-	}
-
-	.hobby .item:hover {
-		background-size: 130%;
 	}
 }
 
@@ -709,13 +768,12 @@ header button {
 		font-size: 40px;
 	}
 }
-
-/*Sekcja 5 contakt*/
+/*Sekcja 5 contact*/
 
 .contact {
 	background-color: #000;
 	padding: 30px 20px;
-	height: 110vh;
+	height: 70%;
 }
 
 .contact h1 {
@@ -728,7 +786,8 @@ header button {
 }
 
 .contact .socials {
-	padding-top: 100px;
+	padding-top: 15vh;
+	padding-bottom: 5vh;
 	font-size: 0;
 	text-align: center;
 	transform: skewY(-15deg);
@@ -738,7 +797,7 @@ header button {
 	padding: 10px 0;
 	color: white;
 	font-family: "Saira Condensed", sans-serif;
-	width: 30%;
+	width: 40%;
 	background-color: #3e3f46;
 	position: relative;
 	left: 40%;
@@ -903,12 +962,16 @@ header button {
 		margin: 0 20px;
 	}
 
-	.contact .socials span {
+	.contact .social {
+		width: 30%;
+	}
+
+	.contact .social span {
 		font-size: 20px;
 		padding-left: 20px;
 	}
 
-	.contact .socials a {
+	.contact .social a {
 		font-size: 20px;
 	}
 }
