--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,9 @@ header button {
 .portfolio {
 	background-color: #1e1e1e;
 	padding: 10px 0 6px;
+	width: 100%;
+	position: relative;
+	overflow: hidden;
 }
 
 .portfolio h1 {
@@ -381,6 +384,31 @@ header button {
 	text-align: center;
 	padding: 10px 20px;
 	margin-bottom: 15px;
+	text-shadow: 0 0 6px black;
+}
+.portfolio .dots {
+	position: absolute;
+	bottom: 15px;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+.portfolio .dots span {
+	display: inline-block;
+	margin: 0 20px;
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	box-shadow: 0 0 0 5px white;
+	cursor: pointer;
+}
+
+.portfolio .dots span:nth-of-type(even).active {
+	box-shadow: 0 0 0 5px white, 0 0 3px 10px #28a6dc;
+}
+
+.portfolio .dots span:nth-of-type(odd).active {
+	box-shadow: 0 0 0 5px white, 0 0 3px 10px #ff4f2c;
 }
 
 .portfolio .web img {
@@ -411,14 +439,8 @@ header button {
 .portfolio .project {
 	max-width: 1440px;
 	margin: 0 auto 20px;
-}
-
-.portfolio .project:nth-of-type(odd) {
+	height: auto;
 	background-color: #ff4f2c;
-}
-
-.portfolio .project:nth-of-type(even) {
-	background-color: #29a6dc;
 }
 
 @media (min-width: 768px) {
@@ -446,18 +468,6 @@ header button {
 	.about {
 		width: 50%;
 		float: left;
-	}
-
-	.web img {
-		display: block;
-	}
-
-	.portfolio .project:nth-of-type(even) .web {
-		float: right;
-	}
-
-	.portfolio .project:nth-of-type(even) .about {
-		padding-right: 0;
 	}
 
 	.portfolio .project:nth-of-type(even) .about h2 {
@@ -529,6 +539,7 @@ header button {
 
 .slogan p {
 	font-family: "Saira", sans-serif;
+	letter-spacing: 1px;
 }
 
 .slogan p.text {
@@ -768,13 +779,12 @@ header button {
 		font-size: 40px;
 	}
 }
-
 /*Sekcja 5 contact*/
 
 .contact {
 	background-color: #000;
 	padding: 30px 20px;
-	height: 110vh;
+	height: 70%;
 }
 
 .contact h1 {
@@ -787,7 +797,8 @@ header button {
 }
 
 .contact .socials {
-	padding-top: 100px;
+	padding-top: 15vh;
+	padding-bottom: 8vh;
 	font-size: 0;
 	text-align: center;
 	transform: skewY(-15deg);
@@ -797,7 +808,7 @@ header button {
 	padding: 10px 0;
 	color: white;
 	font-family: "Saira Condensed", sans-serif;
-	width: 30%;
+	width: 40%;
 	background-color: #3e3f46;
 	position: relative;
 	left: 40%;
@@ -962,12 +973,16 @@ header button {
 		margin: 0 20px;
 	}
 
-	.contact .socials span {
+	.contact .social {
+		width: 30%;
+	}
+
+	.contact .social span {
 		font-size: 20px;
 		padding-left: 20px;
 	}
 
-	.contact .socials a {
+	.contact .social a {
 		font-size: 20px;
 	}
 }
