--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
 	clear: both;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 header {
 	position: relative;
 	background-color: #28a6dc;
@@ -53,16 +57,66 @@ header h2 {
 }
 
 header button {
+	position: relative;
 	font-family: "Saira", sans-serif;
 	font-weight: 300;
 	color: white;
 	line-height: 32px;
 	padding: 0 20px;
 	text-transform: uppercase;
+	letter-spacing: 0.1em;
+	transition: 0.5s;
 	color: white;
 	background-color: transparent;
 	font-size: 12px;
 	border: 2px solid white;
+	cursor: pointer;
+}
+
+header button:hover {
+	background-color: white;
+	color: #111;
+	letter-spacing: 0.15em;
+	box-shadow: 0 0 35px white;
+	border: 2px solid black;
+}
+
+header button span {
+	position: absolute;
+	display: block;
+	top: -12px;
+	left: 100%;
+	transform: translateX(-50%);
+	width: 20px;
+	height: 20px;
+	border: 2px solid black;
+	background-color: white;
+	transition: 0.5s;
+}
+
+header button:hover span {
+	left: 0%;
+	transform: translateX(-50%) rotate(45deg);
+	box-shadow: 58px 58px black;
+}
+
+header button i {
+	position: absolute;
+	display: block;
+	bottom: -12px;
+	left: 0;
+	transform: translateX(-50%);
+	width: 20px;
+	height: 20px;
+	border: 2px solid black;
+	background-color: white;
+	transition: 0.5s;
+}
+
+header button:hover i {
+	left: 100%;
+	transform: translateX(-50%) rotate(-45deg);
+	box-shadow: 58px -58px black;
 }
 
 @media (orientation: portrait) and (min-width: 360px) {
@@ -157,6 +211,14 @@ header button {
 		font-size: 16px;
 		line-height: 40px;
 	}
+
+	header button:hover span {
+		box-shadow: 30px 30px black;
+	}
+
+	header button:hover i {
+		box-shadow: 30px -30px black;
+	}
 }
 
 @media (orientation: landscape) and (min-width: 1024px) {
@@ -181,6 +243,14 @@ header button {
 		margin-top: 80px;
 		font-size: 28px;
 		line-height: 70px;
+	}
+
+	header button:hover span {
+		box-shadow: 59px 59px black;
+	}
+
+	header button:hover i {
+		box-shadow: 59px -59px black;
 	}
 
 	header img {
@@ -244,18 +314,6 @@ header button {
 
 	header img {
 		right: -10%;
-	}
-}
-
-@media (min-width: 1024px) {
-	header button {
-		cursor: pointer;
-		transition: 0.3s;
-	}
-
-	header button:hover {
-		background-color: white;
-		color: #111;
 	}
 }
 
