--- a/css/style.css
+++ b/css/style.css
@@ -379,13 +379,16 @@ header button:hover i {
 	stroke-dasharray: 440;
 	stroke-dashoffset: calc(440 - (440 * var(--num)) / 100);
 	opacity: 0;
-	animation: fadeIn 1s linear forwards;
-	animation-delay: 2s;
+	animation: fadeIn 10s linear forwards infinite;
+	animation-delay: 1s;
 }
 
 @keyframes fadeIn {
 	0% {
 		opacity: 0;
+	}
+	20% {
+		opacity: 1;
 	}
 	100% {
 		opacity: 1;
@@ -396,12 +399,15 @@ header button:hover i {
 	inset: 5px;
 	z-index: 10;
 	transform: rotate(calc(3.6deg * var(--num)));
-	animation: animateDot 2s linear forwards;
+	animation: animateDot 10s linear forwards infinite;
 }
 
 @keyframes animateDot {
 	0% {
 		transform: rotate(0deg);
+	}
+	20% {
+		transform: rotate(calc(3.6deg * var(--num)));
 	}
 	100% {
 		transform: rotate(calc(3.6deg * var(--num)));
